--- a/.github/workflows/zk-ci.yml
+++ b/.github/workflows/zk-ci.yml
@@ -1,33 +1,55 @@
 name: ZK prototype CI
+
 on:
   pull_request:
-    paths: [ 'prototype/**' ]
+    paths:
+      - 'prototype/**'
   push:
-    branches: [ main ]
+    branches:
+      - main
+
 jobs:
   build-test:
     runs-on: ubuntu-latest
     defaults:
       run:
         working-directory: prototype/wbps_circuit
+
     steps:
-      - uses: actions/checkout@v4
-      - name: Compile circuit (circom via Docker)
-        uses: addnab/docker-run-action@v3
-        with:
-          image: iden3/circom:latest
-          options: -v ${{ github.workspace }}/prototype/wbps_circuit:/work
-          run: |
-            cd /work
-            circom circ_eddsa_cardano.circom --r1cs --wasm --sym
-      - name: Setup Node
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-      - name: Install snarkjs
-        run: npm i -g snarkjs@0.7.x
-      - name: Prove & verify (permissive until vectors are final)
+
+      - name: Setup Rust (for circom build)
+        uses: dtolnay/rust-toolchain@stable
+
+      - name: Install circom & snarkjs
         run: |
+          cargo install --git https://github.com/iden3/circom --locked --force
+          npm install -g snarkjs@^0.7.0
+          circom --version
+          # snarkjs prints help & may exit 99; don’t fail the job
+          snarkjs -v || true
+
+      - name: Fetch circuits (replace removed submodules)
+        run: |
+          git clone --depth=1 https://github.com/iden3/circomlib.git circomlib
+          git clone --depth=1 https://github.com/bkomuves/hash-circuits.git hashing_circuits
+
+      - name: Compile circuit
+        run: |
+          circom circ_eddsa_cardano.circom --r1cs --wasm --sym \
+            -l ./circomlib/circuits \
+            -l ./hashing_circuits \
+            -l .
+
+      - name: Witness / Prove / Verify (permissive until vectors are final)
+        run: |
+          # Ensure input vector exists (link or fallback to {})
           if [ ! -f circ_eddsa_cardano_input.json ]; then
             if [ -f vectors/circ_eddsa_cardano_input.json ]; then
               ln -s vectors/circ_eddsa_cardano_input.json circ_eddsa_cardano_input.json
@@ -35,14 +57,30 @@ jobs:
               echo '{}' > circ_eddsa_cardano_input.json
             fi
           fi
-          node circ_eddsa_cardano_js/generate_witness.js \
+
+          # Witness generation
+          snarkjs wtns calculate \
             circ_eddsa_cardano_js/circ_eddsa_cardano.wasm \
             circ_eddsa_cardano_input.json \
             circ_eddsa_cardano.wtns || true
+
+          # Export public signals
           snarkjs wtns export json circ_eddsa_cardano.wtns circ_eddsa_cardano_public.json || true
+
+          # Trusted setup (lab use only)
           snarkjs powersoftau new bn128 19 powersoftau.ptau
-          snarkjs powersoftau prepare phase2 powersoftau.ptau
+          snarkjs powersoftau prepare phase2 powersoftau.ptau pot_final.ptau
           snarkjs groth16 setup circ_eddsa_cardano.r1cs pot_final.ptau circ_eddsa_cardano.zkey
           snarkjs zkey export verificationkey circ_eddsa_cardano.zkey circ_eddsa_cardano_verifkey.json
-          snarkjs groth16 prove circ_eddsa_cardano.zkey circ_eddsa_cardano.wtns circ_eddsa_cardano_proof.json circ_eddsa_cardano_public.json || true
-          snarkjs groth16 verify circ_eddsa_cardano_verifkey.json circ_eddsa_cardano_public.json circ_eddsa_cardano_proof.json || true
+
+          # Prove & verify (permissive mode)
+          snarkjs groth16 prove \
+            circ_eddsa_cardano.zkey \
+            circ_eddsa_cardano.wtns \
+            circ_eddsa_cardano_proof.json \
+            circ_eddsa_cardano_public.json || true
+
+          snarkjs groth16 verify \
+            circ_eddsa_cardano_verifkey.json \
+            circ_eddsa_cardano_public.json \
+            circ_eddsa_cardano_proof.json || true
