significantly fleshed out prototype, mostly "realistic" (sans proper proving, signing etc) flow working in roundtrip test

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,8 @@ prototype/*.vtc
 !prototype/wbps_circuit/*.json
 
 cavefish-server/dist-newstyle/
+cavefish-server/.local/
+cavefish-server/.cabal/
+cavefish-server/.cache/
+cavefish-server/.cabal-local/
+cavefish-server/.config/
