Jump to definition friendly env

--- a/cavefish-server/cabal.project
+++ b/cavefish-server/cabal.project
@@ -1,12 +1,12 @@
 packages:
   ./cavefish
 
+package cavefish
+  flags: +ide-stub
+
 package cardano-crypto-praos
   flags: -external-libsodium-vrf
 
--- Custom repository for cardano haskell packages
--- See https://github.com/IntersectMBO/cardano-haskell-packages
--- on how to use CHaP in a Haskell project.
 repository cardano-haskell-packages
   url: https://chap.intersectmbo.org/
   secure: True
@@ -21,45 +21,47 @@ repository cardano-haskell-packages
 index-state:
   , hackage.haskell.org 2025-04-16T16:04:13Z
   , cardano-haskell-packages 2025-05-16T15:25:35Z
-    
--- We never, ever, want this.
+
 write-ghc-environment-files: never
 
--- The only sensible test display option, since it allows us to have colourized
--- 'tasty' output.
 test-show-details: direct
 
--- These packages appear in our dependency tree and are very slow to build.
--- Empirically, turning off optimization shaves off ~50% build time.
--- It also mildly improves recompilation avoidance.
--- For dev work we don't care about performance so much, so this is okay.
 package cardano-ledger-alonzo
   optimization: False
 package ouroboros-consensus-cardano
   optimization: False
 package cardano-api
   optimization: False
+
 package cardano-crypto-praos
   flags: -external-libsodium-vrf
-  
+
 constraints:
   cardano-api == 10.16.1.0
-  
+
 source-repository-package
-    type: git
-    location: https://github.com/intersectMBO/cardano-node-emulator
-    tag: 6d65996418d2b00fa791407ec47e2fe77c208790
-    subdir:
-      plutus-script-utils
-      plutus-ledger
-      cardano-node-emulator
-      freer-extras
-      --sha256: 0vyf0039wdy815r0250xhnc4dvwj8rhaa16zd9ji700x1gkkh8gv
+  type: git
+  location: https://github.com/intersectMBO/cardano-node-emulator
+  tag: 6d65996418d2b00fa791407ec47e2fe77c208790
+  --sha256: 0vyf0039wdy815r0250xhnc4dvwj8rhaa16zd9ji700x1gkkh8gv
+  subdir:
+    plutus-script-utils
+    plutus-ledger
+    cardano-node-emulator
+    freer-extras
 
 source-repository-package
     type: git
     location: https://github.com/tweag/cooked-validators
     tag: v7.0.0
+    --sha256: 1d506dlwmg5jqfjzynlsasdc16cvh74cj804rsanryj1ld534x9m
     subdir:
       .
-    --sha256: 1d506dlwmg5jqfjzynlsasdc16cvh74cj804rsanryj1ld534x9m
+
+-- cardano-api as local source (so HLS can jump into it)
+source-repository-package
+  type: git
+  location: https://github.com/IntersectMBO/cardano-api
+  tag: cardano-api-10.16.1.0
+  subdir: cardano-api
+  --sha256: 0w5zwfzs3hs47vl9vpp4llccvbr0yys2fx2mlmlnv4qx6d8796hb
