--- a/cavefish-server/cavefish/cavefish.cabal
+++ b/cavefish-server/cavefish/cavefish.cabal
@@ -17,6 +17,9 @@ library
     Core.Proof
     Core.TxAbs
     Observers.Observer
+    Sp.App
+    Sp.Emulator
+    Client.Mock
     Sp.Server
     Sp.State
     Sp.TxBuilder
@@ -63,6 +66,7 @@ library
     , text
     , time
     , containers
+    , data-default
     , cooked-validators
     , cardano-ledger-core
     , cardano-ledger-alonzo
@@ -74,6 +78,7 @@ library
     , plutus-ledger
     , memory
     , stm
+    , uuid
   if flag(ide-stub)
     cpp-options: -DIDE_STUB
 
@@ -148,3 +153,4 @@ test-suite test
     , transformers
     , mtl
     , cardano-crypto-class
+    , uuid
