--- a/cavefish-server/cavefish/cavefish.cabal
+++ b/cavefish-server/cavefish/cavefish.cabal
@@ -86,6 +86,20 @@ library
   if flag(ide-stub)
     cpp-options: -DIDE_STUB
 
+executable cavefish-server
+  ghc-options: -Wall -Wcompat
+  hs-source-dirs: app
+  main-is: Main.hs
+  build-depends:
+    , base >=4.9 && <5
+    , cavefish
+    , warp
+    , cooked-validators
+    , bytestring
+    , crypton
+    , stm
+  default-language: Haskell2010
+
 benchmark bench
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   type:           exitcode-stdio-1.0
